force-app/main/default/objects/Patient_Milestone_Task_Form_Question__c/Patient_Milestone_Task_Form_Question__c.object-meta.xml
<CustomObject>
    <label>Patient Milestone Task Form Question</label>
    <nameField>
        <displayFormat>PMTFQ-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Patient Milestone Task Form Questions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>