force-app/main/default/objects/Patient_Milestone_Task_Form_Question__c/fields/Form_Question__c.field-meta.xml
<CustomField>
    <fullName>Form_Question__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Form Question</label>
    <referenceTo>Form_Question__c</referenceTo>
    <relationshipLabel>Patient Milestone Task Form Questions</relationshipLabel>
    <relationshipName>Patient_Milestone_Task_Form_Questions</relationshipName>
    <type>Lookup</type>
</CustomField>