force-app/main/default/objects/Patient_Milestone_Task_Form_Question__c/fields/Help_Text__c.field-meta.xml
<CustomField>
    <fullName>Help_Text__c</fullName>
    <label>Help Text</label>
    <type>TextArea</type>
</CustomField>