force-app/main/default/objects/Patient_Milestone_Task_Form_Question__c/fields/Is_Manufacturing__c.field-meta.xml
<CustomField>
    <fullName>Is_Manufacturing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Manufacturing</label>
    <type>Checkbox</type>
</CustomField>