force-app/main/default/objects/Patient_Milestone_Task_Form_Question__c/fields/isManufacturingStatus__c.field-meta.xml
<CustomField>
    <fullName>isManufacturingStatus__c</fullName>
    <formula>Form_Question__r.isManufacturingStatus__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>isManufacturingStatus</label>
    <type>Checkbox</type>
</CustomField>