force-app/main/default/objects/Patient_Milestone_Task_Form_Question__c/fields/Patient_Milestone_Task__c.field-meta.xml
<CustomField>
    <fullName>Patient_Milestone_Task__c</fullName>
    <label>Patient Milestone Task</label>
    <referenceTo>Patient_Milestone_Task__c</referenceTo>
    <relationshipLabel>Patient Milestone Task Form Questions</relationshipLabel>
    <relationshipName>Patient_Milestone_Task_Form_Questions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>