force-app/main/default/objects/Patient_Milestone_Task_Form_Question__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Picklist_Values__c</columns>
    <columns>Label__c</columns>
    <columns>Value__c</columns>
    <columns>Read_Only__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>